--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #6C5B7B;
+    background-color: #0091CF;
     font-family: 'Anek Telugu', sans-serif;
     font-size: 21px;
     overflow-x: hidden;
@@ -26,7 +26,7 @@ header {
 /* ------------------- Navigation -------------------------- */
 nav {
     align-items: center;
-    background-color: #6C5B7B;
+    background-color: #0091CF;
     display: flex;
     justify-content: space-around;
     min-height: 8vh;
@@ -51,7 +51,7 @@ nav {
 .nav__links {
     cursor: hand;
     align-items: center;
-    background-color: #CD6C84;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -73,7 +73,7 @@ nav {
     letter-spacing: 2px;
     font-size: 200%;
     font-weight: 100;
-    color: #ffffff;
+    color: #0091CF;
     text-decoration: none;
     text-align: left;
 }
