--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -31,7 +31,7 @@
 .project_detail_section .wrapper .project h2 {
     font-size: 350%;
     font-weight: 600;
-    color: #ffffff;
+    color: #FFAF00;
     padding-top: 30px;
     padding-bottom: 20px;
     text-align: center;
@@ -43,6 +43,6 @@
     font-weight: 200;
     padding-bottom: 10px;
     margin-left: 10px;
-    color: #f1f1f1;
+    color: #FFAF00;
 }
 /* ------------------------------------------------- */
