--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,8 +37,9 @@ nav {
 
 /* Logo */
 #logo {
-    font-family: 'Ms Madi', cursive;
-    font-size: 120%;
+    /* font-family: 'Ms Madi', cursive; */
+    font-size: 80%;
+    text-transform: uppercase;
     font-weight: 400;
     margin-right: 920px;
     cursor: hand;
